create vaccine result, export health check result to excel